# AnimaSpot

./: .gitignore  AnimaSpot_Retargeting_Prompt_v2.md  README.md  play_bow.csv  play_bow.npz  visualize_compare_pose3d.py  visualize_retarget_stages.py  visualize_spot_csv_mujoco.py
animaspot_retarget/: __init__.py  config.py  export.py  (+10 more)
recovery_projects/FMPose3D/: .gitignore  README.md  pyproject.toml
recovery_projects/FMPose3D/.cursor/rules/: fmpose3d-animal-pipeline.mdc
recovery_projects/FMPose3D/.github/workflows/: README.md  build.yaml  check-headers.yml  codespell.yml  release-pypi.yml
recovery_projects/FMPose3D/animals/: README.md
recovery_projects/FMPose3D/animals/dataset/: readme.txt
recovery_projects/FMPose3D/animals/demo/: vis_animals.py  vis_animals.sh  visualize_3d_poses.py
recovery_projects/FMPose3D/animals/models/: model_animals.py
recovery_projects/FMPose3D/animals/scripts/: main_animal3d.py  test_animal3d.sh  train_animal3d.sh
recovery_projects/FMPose3D/dataset/: readme.txt
recovery_projects/FMPose3D/demo/: vis_in_the_wild.py  vis_in_the_wild.sh
recovery_projects/FMPose3D/fmpose3d/: __init__.py  aggregation_methods.py
recovery_projects/FMPose3D/fmpose3d/animals/: __init__.py
recovery_projects/FMPose3D/fmpose3d/animals/common/: __init__.py  animal3d_dataset.py  animal_visualization.py  arber_dataset.py  arguments.py  camera.py  graph_utils.py  lifter3d.py  mocap_dataset.py  skeleton.py  utils.py
recovery_projects/FMPose3D/fmpose3d/animals/models/: __init__.py  graph_frames.py  model_animal3d.py
recovery_projects/FMPose3D/fmpose3d/common/: __init__.py  arguments.py  config.py  generator.py  graph_utils.py  h36m_dataset.py  load_data_hm36.py  utils.py
recovery_projects/FMPose3D/fmpose3d/inference_api/: README.md  __init__.py  fmpose3d.py
recovery_projects/FMPose3D/fmpose3d/models/: __init__.py  base_model.py
recovery_projects/FMPose3D/fmpose3d/models/fmpose3d/: __init__.py  graph_frames.py  model_GAMLP.py
recovery_projects/FMPose3D/scripts/: FMPose3D_main.py  FMPose3D_test.sh  FMPose3D_train.sh  update_headers.py
recovery_projects/FMPose3D/tests/: test_config.py  test_demo_human.py  test_model.py  test_training_pipeline.py
recovery_projects/FMPose3D/tests/fmpose3d_api/: __init__.py  conftest.py  test_fmpose3d.py  test_huggingface.py  test_pipeline.py
(+371 files in other folders)
