[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fmpose3d"
readme = "README.md"
requires-python = ">=3.8"
dynamic = ["version"]
license = {text = "Apache 2.0"}
authors = [
    {name = "Ti Wang", email = "ti.wang@epfl.ch"},
    {name = "Xiaohang Yu"},
    {name = "Mackenzie Weygandt Mathis",  email = "mackenzie.mathis@epfl.ch"},
]
keywords = ["pose estimation", "3D pose", "flow matching", "computer vision"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.4.1",
    "torchvision>=0.19.1",
    "timm>=1.0.0",
    "einops>=0.4.0",
    "numpy>=1.18.5,<2.0",
    "tqdm>=4.60.0",
    "scipy>=1.7.0",
    "yacs>=0.1.8",
    "opencv-python>=4.5.0",
    "numba>=0.56.0",
    "scikit-image>=0.19.0",
    "filterpy>=1.4.5",
    "pandas>=1.0.1",
    "deeplabcut==3.0.0rc13",
    "huggingface_hub>=0.20.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "black>=22.0.0", "flake8>=4.0.0", "isort>=5.10.0"]
wandb = ["wandb>=0.12.0"]
viz = ["matplotlib>=3.5.0", "opencv-python>=4.5.0"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["fmpose*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.cfg", "*.names"]

[tool.setuptools.dynamic]
version = {attr = "fmpose3d.__version__"}

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310']

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
markers = [
    "functional: marks tests that require pretrained weights (deselect with '-m \"not functional\"')",
    "network: marks tests that may need internet access on first run (deselect with '-m \"not network\"')",
]

[tool.codespell]
skip = '.git,*.pdf,*.svg,*.css,*.txt,*.pth'
check-hidden = true
ignore-words-list = 'fmpose,mpjpe,uvd,xyz,hm36,cpn,dbb'
